--- a/client/package.json
+++ b/client/package.json
@@ -12,26 +12,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.1.1",
-    "@angular/cdk": "10.2.0",
-    "@angular/common": "10.1.1",
-    "@angular/compiler": "10.1.1",
-    "@angular/core": "10.1.1",
-    "@angular/forms": "10.1.1",
-    "@angular/material": "10.2.0",
-    "@angular/platform-browser": "10.1.1",
-    "@angular/platform-browser-dynamic": "10.1.1",
-    "@angular/router": "10.1.1",
+    "@angular/animations": "10.1.6",
+    "@angular/cdk": "10.2.5",
+    "@angular/common": "10.1.6",
+    "@angular/compiler": "10.1.6",
+    "@angular/core": "10.1.6",
+    "@angular/forms": "10.1.6",
+    "@angular/material": "10.2.5",
+    "@angular/platform-browser": "10.1.6",
+    "@angular/platform-browser-dynamic": "10.1.6",
+    "@angular/router": "10.1.6",
     "@ng-bootstrap/ng-bootstrap": "7.0.0",
     "@ngx-loading-bar/core": "5.1.0",
     "@ngx-loading-bar/http": "4.2.0",
     "@ngx-loading-bar/http-client": "5.1.0",
     "@ngx-loading-bar/router": "5.1.0",
-    "bootstrap": "4.5.2",
+    "bootstrap": "4.5.3",
     "core-js": "3.6.5",
     "d3": "5.11.0",
     "jquery": "3.5.1",
-    "pb-design-system": "6.1.12",
+    "pb-design-system": "6.1.14",
     "popper.js": "1.16.1",
     "rxjs": "6.6.3",
     "tslib": "^2.0.1",
@@ -39,26 +39,26 @@
     "topojson": "3.0.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.0",
-    "@angular/cli": "10.1.0",
-    "@angular/compiler-cli": "10.1.1",
-    "@angular/language-service": "10.1.1",
+    "@angular-devkit/build-angular": "~0.1001.7",
+    "@angular/cli": "10.1.7",
+    "@angular/compiler-cli": "10.1.6",
+    "@angular/language-service": "10.1.6",
     "@types/d3": "5.7.2",
-    "@types/jasmine": "3.3.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine": "3.3.0",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "@types/jasmine": "3.5.14",
+    "@types/node": "^14.14.0",
+    "codelyzer": "^6.0.1",
+    "jasmine": "3.6.2",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "6.0.0",
+    "karma": "5.2.3",
+    "karma-chrome-launcher": "3.1.0",
     "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "8.0.2",
-    "tslint": "~6.1.0",
-    "typescript": "4.0.2"
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "7.0.0",
+    "ts-node": "9.0.0",
+    "tslint": "6.1.3",
+    "typescript": "4.0.3"
   }
 }
