--- a/package.json
+++ b/package.json
@@ -18,25 +18,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "4.22.0",
-    "@typescript-eslint/eslint-plugin-tslint": "4.22.0",
-    "@typescript-eslint/parser": "4.22.0",
-    "eslint": "7.25.0",
-    "eslint-config-prettier": "8.1.0",
+    "@typescript-eslint/eslint-plugin": "4.23.0",
+    "@typescript-eslint/eslint-plugin-tslint": "4.23.0",
+    "@typescript-eslint/parser": "4.23.0",
+    "eslint": "7.26.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-import-resolver-typescript": "2.4.0",
     "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-json": "2.1.2",
+    "eslint-plugin-json": "3.0.0",
     "eslint-plugin-prettier": "3.4.0",
-    "postcss": "8.2.13",
-    "postcss-sass": "0.4.4",
+    "postcss": "8.2.15",
+    "postcss-sass": "^0.5.0",
     "tslint": "6.1.3",
     "typescript": "4.1.5"
   },
   "devDependencies": {
     "autoprefixer": "10.2.5",
     "postcss-cli": "8.3.1",
-    "prettier": "2.2.1",
-    "stylelint": "13.13.0",
+    "prettier": "2.3.0",
+    "stylelint": "13.13.1",
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-recommended-scss": "4.2.0",
     "stylelint-prettier": "1.2.0",
