--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter",
-  "version": "2.7.0",
+  "version": "2.8.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -13,52 +13,42 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.2.8",
-    "@angular/cdk": "11.2.11",
-    "@angular/common": "12.2.8",
-    "@angular/compiler": "12.2.8",
-    "@angular/core": "12.2.8",
-    "@angular/forms": "12.2.8",
-    "@angular/localize": "12.2.8",
-    "@angular/material": "11.2.11",
-    "@angular/platform-browser": "12.2.8",
-    "@angular/platform-browser-dynamic": "12.2.8",
-    "@angular/router": "12.2.8",
+    "@angular/animations": "12.2.12",
+    "@angular/cdk": "12.2.12",
+    "@angular/common": "12.2.12",
+    "@angular/compiler": "12.2.12",
+    "@angular/core": "12.2.12",
+    "@angular/forms": "12.2.12",
+    "@angular/localize": "12.2.12",
+    "@angular/material": "12.2.12",
+    "@angular/platform-browser": "12.2.12",
+    "@angular/platform-browser-dynamic": "12.2.12",
+    "@angular/platform-server": "12.2.12",
+    "@angular/router": "12.2.12",
     "@ng-bootstrap/ng-bootstrap": "9.1.0",
     "@ngx-loading-bar/core": "5.1.2",
     "@ngx-loading-bar/http-client": "5.1.2",
     "@ngx-loading-bar/router": "5.1.2",
     "bootstrap": "4.6.0",
-    "core-js": "3.11.1",
-    "d3": "6.7.0",
+    "core-js": "3.19.1",
+    "d3": "7.1.1",
     "jquery": "3.6.0",
-    "pb-design-system": "6.7.1",
+    "pb-design-system": "6.8.0",
     "popper.js": "1.16.1",
-    "rxjs": "6.6.3",
+    "rxjs": "6.6.7",
     "topojson-client": "3.1.0",
-    "tslib": "2.2.0",
-    "zone.js": "^0.11.4"
+    "tslib": "2.3.1",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.8",
-    "@angular/cli": "12.2.8",
-    "@angular/compiler-cli": "12.2.8",
-    "@angular/language-service": "12.2.8",
-    "@types/d3": "6.3.0",
-    "@types/jasmine": "3.6.10",
+    "@angular-devkit/build-angular": "~12.2.12",
+    "@angular/cli": "12.2.12",
+    "@angular/compiler-cli": "12.2.12",
+    "@angular/language-service": "12.2.12",
+    "@types/d3": "7.0.0",
     "@types/node": "15.0.1",
-    "codelyzer": "6.0.1",
-    "jasmine": "3.7.0",
-    "jasmine-core": "3.7.1",
-    "jasmine-spec-reporter": "7.0.0",
-    "karma": "6.3.2",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-cli": "2.0.0",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.5.4",
-    "protractor": "7.0.0",
-    "ts-node": "9.1.1",
+    "codelyzer": "6.0.2",
+    "ts-node": "10.2.0",
     "tslint": "6.1.3",
     "typescript": "4.3.5"
   }
