--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter",
-  "version": "2.11.0",
+  "version": "3.0.0-beta.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -29,11 +29,11 @@
     "@ngx-loading-bar/core": "6.0.2",
     "@ngx-loading-bar/http-client": "6.0.2",
     "@ngx-loading-bar/router": "6.0.2",
-    "bootstrap": "4.6.0",
+    "bootstrap": "5.2.3",
     "core-js": "3.26.1",
     "d3": "7.6.1",
     "jquery": "3.6.1",
-    "pb-design-system": "6.16.0",
+    "pb-design-system": "7.0.0-beta.1",
     "popper.js": "1.16.1",
     "rxjs": "6.6.7",
     "topojson-client": "3.1.0",
