--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "A starter project for Angular 15 and Bootstrap 5",
   "license": "MIT",
   "scripts": {
@@ -14,18 +14,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "15.2.9",
+    "@angular/animations": "15.2.10",
     "@angular/cdk": "15.2.9",
-    "@angular/common": "15.2.9",
+    "@angular/common": "15.2.10",
     "@angular/compiler": "15.2.9",
-    "@angular/core": "15.2.9",
-    "@angular/forms": "15.2.9",
-    "@angular/localize": "15.2.9",
-    "@angular/material": "15.2.9",
-    "@angular/platform-browser": "15.2.9",
-    "@angular/platform-browser-dynamic": "15.2.9",
-    "@angular/platform-server": "15.2.9",
-    "@angular/router": "15.2.9",
+    "@angular/core": "15.2.10",
+    "@angular/forms": "15.2.10",
+    "@angular/localize": "15.2.10",
+    "@angular/material": "^15.2.9",
+    "@angular/platform-browser": "15.2.10",
+    "@angular/platform-browser-dynamic": "15.2.10",
+    "@angular/platform-server": "15.2.10",
+    "@angular/router": "15.2.10",
     "@ng-bootstrap/ng-bootstrap": "14.2.0",
     "@ngx-loading-bar/core": "6.0.2",
     "@ngx-loading-bar/http-client": "6.0.2",
@@ -42,10 +42,10 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "15.2.8",
-    "@angular/cli": "15.2.8",
-    "@angular/compiler-cli": "15.2.9",
-    "@angular/language-service": "15.2.9",
+    "@angular-devkit/build-angular": "15.2.10",
+    "@angular/cli": "15.2.10",
+    "@angular/compiler-cli": "15.2.10",
+    "@angular/language-service": "15.2.10",
     "@types/d3": "7.4.0",
     "@types/node": "15.0.1",
     "codelyzer": "6.0.2",
