--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,7 @@
     "@popperjs/core": "2.11.8",
     "bootstrap": "5.2.3",
     "d3": "7.8.4",
-    "pb-design-system": "7.1.0-beta.0",
+    "pb-design-system": "^7.1.1",
     "rxjs": "6.6.7",
     "topojson-client": "3.1.0",
     "tslib": "2.5.2",
