--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter",
-  "version": "3.1.0",
+  "version": "4.0.0-beta",
   "description": "A starter project for Angular 15 and Bootstrap 5",
   "license": "MIT",
   "scripts": {
