--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-starter-app",
-  "version": "3.1.0",
+  "version": "4.0.0-beta",
   "description": "PBDS Angular Starter Application",
   "main": "index.html",
   "scripts": {
