--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter",
-  "version": "4.0.0-beta",
+  "version": "16.0.0",
   "description": "A starter project for Angular 15 and Bootstrap 5",
   "license": "MIT",
   "scripts": {
@@ -33,7 +33,7 @@
     "@popperjs/core": "2.11.8",
     "bootstrap": "5.2.3",
     "d3": "7.8.4",
-    "pb-design-system": "16.0.0-beta.2",
+    "pb-design-system": "16.0.0",
     "rxjs": "6.6.7",
     "topojson-client": "3.1.0",
     "tslib": "2.5.2",
